--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<title>ilo nimi</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style.css?v=2">
         <link rel="manifest" href="manifest.json">
 	</head>
 	<body>
 		<div id="container">
 			<h1>ilo nimi</h1>
-			<textarea id="text" name="text" rows="9"></textarea>
+			<textarea id="text" name="text" rows="7"></textarea>
 			<p id="output"></p>
 
             <p>View source: <a href="https://github.com/0xdstn/ilo-nimi" target="_blank">https://github.com/0xdstn/ilo-nimi</a></p>
