--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<p id="output"></p>
 
             <p>View source: <a href="https://github.com/0xdstn/ilo-nimi" target="_blank">https://github.com/0xdstn/ilo-nimi</a></p>
-            <p>Project information: <a href="https://tilde.town/~dustin/projects/ilo-nimi" target="_blank">https://tilde.town/~dustin/projects/ilo-nimi</a></p>
+            <p>Project information: <a href="https://0xdstn.site/projects/ilo-nimi" target="_blank">https://0xdstn.site/projects/ilo-nimi</a></p>
   		</div>
 		
         <script src="main.js"></script>
